--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrate": "knex migrate:latest",
+    "migrate:down": "knex migrate:down",
+    "migrate:rollback": "knex migrate:rollback",
+    "migrate:make": "knex migrate:make"
   },
   "dependencies": {
     "axios": "^1.8.3",
@@ -15,7 +19,9 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "pg": "^8.14.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
